# samples-py

./: .editorconfig  .lefthook.yml  README.md  pyproject.toml
.devcontainer/: on-create.sh
.devcontainer-compose/: on-create.sh
ctypes/groonga/: README.md  pyproject.toml
ctypes/groonga/examples/: query-source.py
ctypes/groonga/src/ctypes_groonga/: __init__.py  column.py  error.py  groonga.py  record.py  table.py  util.py
ctypes/groonga/test/: __init__.py  test_groonga.py  test_table.py
grpcio/client/: main.py  pyproject.toml  service_pb2.pyi
grpcio/proto/: service.proto
grpcio/server/: build.sh  main.py  pyproject.toml  service_pb2.py  service_pb2_grpc.py
pandas/dataframe/: README.md  pyproject.toml
pandas/dataframe/src/pandas_dataframe/: __init__.py
pandas/merge/: README.md  pyproject.toml
pandas/merge/src/pandas_merge/: __init__.py
pywin32/security/: README.md  pyproject.toml
pywin32/security/src/pywin32_security/: __init__.py
pywin32/wmi/: README.md  pyproject.toml
pywin32/wmi/src/pywin32_wmi/: __init__.py
rich/live/: README.md  pyproject.toml
rich/live/src/rich_live/: __init__.py
rich/progress/: README.md  pyproject.toml
rich/progress/src/rich_progress/: __init__.py
swig/error/: .gitignore  README.md  pyproject.toml
swig/error/src/swig_error/: __init__.py  error.c  error.h  error.i
swig/exception/: .gitignore  README.md  pyproject.toml
swig/exception/src/swig_exception/: __init__.py  exception.cpp  exception.hpp  exception.i
swig/libvirt/: .gitignore  README.md  pyproject.toml
swig/libvirt/src/swig_libvirt/: __init__.py  native.i
swig/minimum/: .gitignore  README.md  pyproject.toml  setup.py
swig/minimum/src/swig_minimum/: __init__.py  arithmetic.c  arithmetic.i
wol/: wol-catcher.py
