[project]
name = "samples-py"
version = "0.1.0"
authors = [{ name = "9506hqwy" }]
description = "Python code samples."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">= 3.12"

[project.urls]
Homepage = "https://github.com/9506hqwy/samples-py"

[dependency-groups]
dev = ["mypy>=1.17.1", "ruff>=0.12.11"]

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
exclude_gitignore = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
implicit_optional = false
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

[tool.ruff]
# relaxed line length
line-length = 99

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
extend-select = [
  "ANN", # flake8-annotations (ANN)
  "S",   # flake8-bandit (S)
  "A",   # flake8-builtins (A)
  "FIX", # flake8-fixme (FIX)
  "PYI", # flake8-pyi (PYI)
  "Q",   # flake8-quotes (Q)
  "PTH", # flake8-use-pathlib (PTH)
  "I",   # isort (I)
  "N",   # pep8-naming (N)
  "E",   # pycodestyle (E)
  "W",   # pycodestyle (W)
  "D",   # pydocstyle (D)
  "F",   # Pyflakes (F)
  "PL",  # Pylint (PL)
  "UP",  # pyupgrade (UP)
  "RUF", # Ruff-specific rules (RUF)
]
ignore = [
  "D203", # incorrect-blank-line-before-class (D203)
  "D213", # multi-line-summary-second-line (D213)
]

[tool.uv.workspace]
members = ["swig/error", "swig/exception", "swig/libvirt", "swig/minimum"]
