[project]
name = "grpc-client"
version = "0.1.0"
authors = [{ name = "9506hqwy" }]
description = "gRPC client sample."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["grpcio>=1.80.0"]

[dependency-groups]
dev = [
  "grpcio-tools>=1.80.0",
  "types-grpcio>=1.0.0.20260518",
  "types-protobuf>=7.34.1.20260518",
]
