[project]
name = "pandas-merge"
version = "0.1.0"
authors = [{ name = "9506hqwy" }]
description = "pandas merge sample."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pandas[plot]>=2.3.3"]

[project.scripts]
pandas-merge-cross = "pandas_merge:cross"
pandas-merge-indicator = "pandas_merge:indicator"
pandas-merge-inner = "pandas_merge:inner"
pandas-merge-left = "pandas_merge:left"
pandas-merge-right = "pandas_merge:right"
pandas-merge-outer = "pandas_merge:outer"
pandas-merge-suffixes = "pandas_merge:suffixes"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pandas-stubs>=2.3.2.250926"]
