[project]
name = "pywin32-security"
version = "0.1.0"
authors = [{ name = "9506hqwy" }]
description = "pywin32 security sample."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pywin32>=311"]

[project.scripts]
pywin32-security-file-dacl = "pywin32_security:file_dacl"
pywin32-security-file-group = "pywin32_security:file_group"
pywin32-security-file-owner = "pywin32_security:file_owner"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["types-pywin32>=311.0.0.20251008"]
